# PlotZone

./: .gitmodules  CMakeLists.txt  vcpkg.json
font/: FontAwesome5.h  FontAwesome6.h
include/: Application.h
include/Actor/: Actor.h  IMessage.h  Message.h
include/Bucket/: BucketHash.h  BucketManager.h
include/Renderer/: FrameBufferObject.h  PlatformGl.h  Renderer.h  SystemFontHelper.h  UrlClient.h
include/Service/: DataManagerService.h  DataTableService.h  Service.h
include/State/: ApplicationState.h  DataTableWindowState.h  MapWindowState.h
include/UI/: UI.h
include/UI/DataTable/: DataTable.h  DataTableFilter.h  DataTableMenu.h  DataTableQuery.h  DataTableWindow.h
include/UI/Explorer/: Explorer.h  MapExplorer.h  TableExplorer.h
include/UI/MainMenu/: EditMenu.h  FileMenu.h  MenuBar.h  ViewMenu.h
include/UI/Map/: MapController.h  MapRenderer.h  MapWindow.h
include/UI/PopupModal/: MapWindowModal.h  PopupModal.h  TableWindowModal.h  WindowModal.h
include/Utils/: Icons.h  ServiceLocator.h  Thread.h  Types.h  Utils.h
res/: scene.yaml
src/: Application.cpp  main.cpp
src/Renderer/: PlatformGl.cpp  Renderer.cpp  SystemFontHelper.cpp  UrlClient.cpp
src/Service/DataManager/: DataManagerImpl.h  DataManagerService.cpp
src/Service/DataTable/: DataTableImpl.h  DataTableQuery.h  DataTableService.cpp
src/UI/DataTable/: DataTable.cpp  DataTableFilter.cpp  DataTableMenu.cpp  DataTableQuery.cpp  DataTableWindow.cpp
src/UI/Explorer/: MapExplorer.cpp
src/UI/MainMenu/: EditMenu.cpp  FileMenu.cpp  MenuBar.cpp  ViewMenu.cpp
src/UI/Map/: MapController.cpp  MapRenderer.cpp  MapWindow.cpp
src/UI/PopupModal/: PopupModal.cpp  TableWindowModal.cpp
src/Utils/: ServiceLocator.cpp
